--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.17.1
   provider: ^6.0.3
   flutter_spinkit: ^5.1.0
+  just_audio: ^0.9.27
+  audio_video_progress_bar: ^0.10.0
 
 dev_dependencies:
   flutter_test:
