--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   just_audio: ^0.9.27
   audio_video_progress_bar: ^0.10.0
+  audio_session: ^0.1.8
 
 dev_dependencies:
   flutter_test:
